added getvideotaksbyexecution in swagger
